Edit User (Organisation) validations.

--- a/app/src/main/res/layout/fragment_edit_user.xml
+++ b/app/src/main/res/layout/fragment_edit_user.xml
@@ -243,6 +243,7 @@
                     android:id="@+id/mission"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="top"
                     android:hint="@string/mission"
                     android:inputType="textMultiLine"
                     android:lines="4"
