--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context="com.lutzed.servoluntario.login.LoginActivity">
@@ -18,23 +19,36 @@
         android:visibility="gone"/>
 
     <ScrollView
-        android:id="@+id/form"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin">
 
-            <android.support.design.widget.TextInputLayout
+            <ImageView
+                android:id="@+id/logo"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal"
+                android:paddingBottom="30dp"
+                android:paddingLeft="50dp"
+                android:paddingRight="50dp"
+                android:paddingTop="30dp"
+                android:src="@drawable/logo_horiz_white"/>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/emailInputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/logo"
+                android:textColorHint="@color/white">
 
                 <AutoCompleteTextView
                     android:id="@+id/email"
@@ -42,14 +56,19 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/email"
                     android:inputType="textEmailAddress"
-                    android:maxLines="1"/>
+                    android:maxLines="1"
+                    android:textColor="@color/white"/>
 
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/passwordInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:passwordToggleEnabled="true">
+                android:layout_below="@+id/emailInputLayout"
+                android:textColorHint="@color/white"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/white">
 
                 <EditText
                     android:id="@+id/password"
@@ -60,55 +79,75 @@
                     android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
-                    android:maxLines="1"/>
+                    android:maxLines="1"
+                    android:textColor="@color/white"/>
 
             </android.support.design.widget.TextInputLayout>
 
             <Button
+                android:id="@+id/forgot_password_button"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/passwordInputLayout"
+                android:text="@string/forgot_password_reset_it"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="12sp"/>
+
+            <Button
                 android:id="@+id/email_sign_in_button"
-                style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_below="@+id/forgot_password_button"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:text="@string/action_sign_in"
-                android:textStyle="bold"/>
+                android:textColor="@color/colorPrimary"
+                android:textStyle="bold"
+                android:theme="@style/LoginButton"/>
 
             <Button
                 android:id="@+id/facebook_sign_in_button"
-                style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_below="@+id/email_sign_in_button"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:text="@string/action_facebook_sign_in"
-                android:textStyle="bold"/>
+                android:textColor="@color/com_facebook_blue"
+                android:textStyle="bold"
+                android:theme="@style/FacebookButton"/>
 
             <Button
                 android:id="@+id/volunteer_sign_up_button"
-                style="?android:textAppearanceSmall"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/action_sign_up"
-                android:textStyle="bold"/>
-
-            <Button
-                android:id="@+id/forgot_password_button"
-                style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/action_forgot_password"
-                android:textStyle="bold"/>
+                android:layout_below="@+id/facebook_sign_in_button"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:gravity="center"
+                android:text="@string/want_to_be_a_volunteer_sign_up"
+                android:textAllCaps="false"
+                android:textColor="@color/white"/>
 
             <Button
                 android:id="@+id/organization_sign_up_button"
-                style="?android:textAppearanceSmall"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/action_organization_sign_up"
-                android:textStyle="bold"/>
+                android:layout_below="@+id/volunteer_sign_up_button"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:gravity="center"
+                android:text="@string/i_want_my_organization_here"
+                android:textAllCaps="false"
+                android:textColor="@color/white"/>
 
-        </LinearLayout>
+        </RelativeLayout>
+
     </ScrollView>
+
 </LinearLayout>
