--- a/app/src/main/res/layout/fragment_organization.xml
+++ b/app/src/main/res/layout/fragment_organization.xml
@@ -20,10 +20,10 @@
             android:layout_height="120dp"
             android:layout_gravity="center_horizontal"
             android:paddingLeft="16dp"
-            android:visibility="gone"
             android:paddingRight="16dp"
             android:paddingTop="16dp"
             android:scaleType="centerCrop"
+            android:visibility="gone"
             app:srcCompat="@drawable/ic_user_placeholder"/>
 
         <TextView
@@ -157,6 +157,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:visibility="gone"
             android:id="@+id/othersWrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -170,6 +171,13 @@
                 android:layout_height="wrap_content"
                 app:primary_icon="@drawable/ic_goal"
                 app:title="@string/mission"/>
+
+            <com.lutzed.servoluntario.util.DataView
+                android:id="@+id/size"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:primary_icon="@drawable/ic_people_black_24dp"
+                app:title="@string/size"/>
 
             <com.lutzed.servoluntario.util.DataView
                 android:id="@+id/establishedAt"
