--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -116,6 +116,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/email_sign_in_button"
                 android:layout_marginLeft="20dp"
+                android:drawableLeft="@drawable/ic_facebook_logo"
                 android:layout_marginRight="20dp"
                 android:text="@string/action_facebook_sign_in"
                 android:textColor="@color/com_facebook_blue"
