--- a/app/src/main/res/layout/fragment_edit_opportunity.xml
+++ b/app/src/main/res/layout/fragment_edit_opportunity.xml
@@ -193,7 +193,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/causes"/>
+                    android:text="@string/gallery"/>
 
                 <TextView
                     android:id="@+id/imagesError"
