--- a/app/src/main/res/menu/opportunity_options.xml
+++ b/app/src/main/res/menu/opportunity_options.xml
@@ -18,8 +18,8 @@
                 android:title="@string/edit"
                 android:visible="false"/>
             <item
-                android:id="@+id/action_sign_out"
-                android:title="@string/sign_out"
+                android:id="@+id/action_delete"
+                android:title="@string/delete"
                 android:visible="false"/>
         </menu>
 
